parser.output
Terminals unused in grammar

    A_LINE
    '['
    ']'
    A_EQUAL


Grammar

    0 $accept: main $end

    1 main: program_prod
    2     | ε

    3 program_prod: A_PROGRAM A_NAME A_BEGIN optional_declaration_list A_END

    4 optional_declaration_list: ε
    5                          | declaration_list

    6 declaration_list: declaration
    7                 | declaration_list ';' declaration

    8 declaration: var_declaration
    9            | proc_declaration
   10            | rec_declaration

   11 var_declaration: A_VAR A_NAME ':' type_spec optional_assign_exp
   12                | A_VAR A_NAME A_ASSIGN exp

   13 optional_assign_exp: ε
   14                    | A_ASSIGN exp

   15 type_spec: A_FLOAT
   16          | A_INT
   17          | A_STRING
   18          | A_BOOL
   19          | A_NAME
   20          | A_REF '(' type_spec ')'

   21 proc_declaration: A_PROCEDURE A_NAME '(' optional_param_list ')' optional_return_type A_BEGIN optional_proc_decls_in_block stmt_list A_END

   22 optional_param_list: ε
   23                    | param_list

   24 param_list: paramfield_decl
   25           | param_list ',' paramfield_decl

   26 paramfield_decl: A_NAME ':' type_spec

   27 optional_return_type: ε
   28                     | ':' type_spec

   29 optional_proc_decls_in_block: ε
   30                             | optional_declaration_list A_IN

   31 stmt_list: ε
   32          | stmt_sequence

   33 stmt_sequence: stmt
   34              | stmt ';' stmt_sequence

   35 rec_declaration: A_STRUCT A_NAME '{' optional_rec_field_list '}'

   36 optional_rec_field_list: ε
   37                        | rec_field_list

   38 rec_field_list: paramfield_decl
   39               | rec_field_list ';' paramfield_decl

   40 exp: literal
   41    | call_stmt_as_exp
   42    | A_NEW A_NAME
   43    | var_access
   44    | ref_var
   45    | deref_var
   46    | '(' exp ')'
   47    | A_NOT exp
   48    | exp A_OR_LOGIC exp
   49    | exp A_AND_LOGIC exp
   50    | exp '<' exp
   51    | exp A_LESS_THAN_EQUAL exp
   52    | exp '>' exp
   53    | exp A_GREATER_THAN_EQUAL exp
   54    | exp '=' exp
   55    | exp A_DIFFERENT exp
   56    | exp '+' exp
   57    | exp '-' exp
   58    | exp '*' exp
   59    | exp '/' exp
   60    | exp '^' exp

   61 ref_var: A_REF '(' var_access ')'

   62 deref_var: A_DEREF '(' var_access ')'
   63          | A_DEREF '(' deref_var ')'

   64 var_access: A_NAME
   65           | exp '.' A_NAME

   66 literal: FLOAT_LITERAL
   67        | INT_LITERAL
   68        | STRING_LITERAL
   69        | bool_literal
   70        | A_NULL

   71 bool_literal: A_TRUE
   72             | A_FALSE

   73 stmt: assign_stmt
   74     | if_stmt
   75     | while_stmt
   76     | return_stmt
   77     | call_stmt

   78 assign_stmt: var_access A_ASSIGN exp
   79            | deref_var A_ASSIGN exp

   80 if_stmt: A_IF exp A_THEN stmt_list optional_else_clause A_FI
   81        | A_UNLESS exp A_DO stmt_list optional_else_clause A_OD
   82        | A_CASE exp A_OF case_list optional_otherwise_clause A_ESAC

   83 optional_else_clause: ε
   84                     | A_ELSE stmt_list

   85 case_list: case_clause
   86          | case_list '|' case_clause

   87 case_clause: case_label_list ':' stmt_list

   88 case_label_list: case_label_element
   89                | case_label_list ',' case_label_element

   90 case_label_element: INT_LITERAL
   91                   | INT_LITERAL A_RANGE INT_LITERAL

   92 optional_otherwise_clause: ε
   93                          | A_OTHERWISE stmt_list

   94 while_stmt: A_WHILE exp A_DO stmt_list A_OD

   95 return_stmt: A_RETURN optional_exp_val

   96 optional_exp_val: ε
   97                 | exp

   98 call_stmt: A_NAME '(' optional_arg_list ')'

   99 call_stmt_as_exp: A_NAME '(' optional_arg_list ')'

  100 optional_arg_list: ε
  101                  | arg_list

  102 arg_list: exp
  103         | arg_list ',' exp


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 20 21 46 61 62 63 98 99
    ')' (41) 20 21 46 61 62 63 98 99
    '*' (42) 58
    '+' (43) 56
    ',' (44) 25 89 103
    '-' (45) 57
    '.' (46) 65
    '/' (47) 59
    ':' (58) 11 26 28 87
    ';' (59) 7 34 39
    '<' (60) 50
    '=' (61) 54
    '>' (62) 52
    '[' (91)
    ']' (93)
    '^' (94) 60
    '{' (123) 35
    '|' (124) 86
    '}' (125) 35
    error (256)
    INT_LITERAL <ival> (258) 67 90 91
    FLOAT_LITERAL <fval> (259) 66
    A_NAME <sval> (260) 3 11 12 19 21 26 35 42 64 65 98 99
    A_LINE (261)
    STRING_LITERAL (262) 68
    A_PROGRAM (263) 3
    A_BEGIN (264) 3 21
    A_END (265) 3 21
    A_PROCEDURE (266) 21
    A_VAR (267) 11 12
    A_IF (268) 80
    A_THEN (269) 80
    A_ELSE (270) 84
    A_FI (271) 80
    A_WHILE (272) 94
    A_DO (273) 81 94
    A_OD (274) 81 94
    A_RETURN (275) 95
    A_UNLESS (276) 81
    A_CASE (277) 82
    A_OF (278) 82
    A_ESAC (279) 82
    A_OTHERWISE (280) 93
    A_TRUE (281) 71
    A_FALSE (282) 72
    A_FLOAT (283) 15
    A_INT (284) 16
    A_STRING (285) 17
    A_BOOL (286) 18
    A_NULL (287) 70
    A_STRUCT (288) 35
    A_IN (289) 30
    A_NOT (290) 47
    A_NEW (291) 42
    A_REF (292) 20 61
    A_DEREF (293) 62 63
    A_U_MINUS (294)
    A_U_PLUS (295)
    A_ASSIGN (296) 12 14 78 79
    A_LESS_THAN_EQUAL (297) 51
    A_GREATER_THAN_EQUAL (298) 53
    A_DIFFERENT (299) 55
    A_EQUAL (300)
    A_OR_LOGIC (301) 48
    A_AND_LOGIC (302) 49
    A_RANGE (303) 91


Nonterminals, with rules where they appear

    $accept (68)
        on left: 0
    main (69)
        on left: 1 2
        on right: 0
    program_prod (70)
        on left: 3
        on right: 1
    optional_declaration_list (71)
        on left: 4 5
        on right: 3 30
    declaration_list (72)
        on left: 6 7
        on right: 5 7
    declaration (73)
        on left: 8 9 10
        on right: 6 7
    var_declaration (74)
        on left: 11 12
        on right: 8
    optional_assign_exp (75)
        on left: 13 14
        on right: 11
    type_spec (76)
        on left: 15 16 17 18 19 20
        on right: 11 20 26 28
    proc_declaration (77)
        on left: 21
        on right: 9
    optional_param_list (78)
        on left: 22 23
        on right: 21
    param_list (79)
        on left: 24 25
        on right: 23 25
    paramfield_decl (80)
        on left: 26
        on right: 24 25 38 39
    optional_return_type (81)
        on left: 27 28
        on right: 21
    optional_proc_decls_in_block (82)
        on left: 29 30
        on right: 21
    stmt_list (83)
        on left: 31 32
        on right: 21 80 81 84 87 93 94
    stmt_sequence (84)
        on left: 33 34
        on right: 32 34
    rec_declaration (85)
        on left: 35
        on right: 10
    optional_rec_field_list (86)
        on left: 36 37
        on right: 35
    rec_field_list (87)
        on left: 38 39
        on right: 37 39
    exp (88)
        on left: 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
        on right: 12 14 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 65 78 79 80 81 82 94 97 102 103
    ref_var (89)
        on left: 61
        on right: 44
    deref_var (90)
        on left: 62 63
        on right: 45 63 79
    var_access (91)
        on left: 64 65
        on right: 43 61 62 78
    literal (92)
        on left: 66 67 68 69 70
        on right: 40
    bool_literal (93)
        on left: 71 72
        on right: 69
    stmt (94)
        on left: 73 74 75 76 77
        on right: 33 34
    assign_stmt (95)
        on left: 78 79
        on right: 73
    if_stmt (96)
        on left: 80 81 82
        on right: 74
    optional_else_clause (97)
        on left: 83 84
        on right: 80 81
    case_list (98)
        on left: 85 86
        on right: 82 86
    case_clause (99)
        on left: 87
        on right: 85 86
    case_label_list (100)
        on left: 88 89
        on right: 87 89
    case_label_element (101)
        on left: 90 91
        on right: 88 89
    optional_otherwise_clause (102)
        on left: 92 93
        on right: 82
    while_stmt (103)
        on left: 94
        on right: 75
    return_stmt (104)
        on left: 95
        on right: 76
    optional_exp_val (105)
        on left: 96 97
        on right: 95
    call_stmt (106)
        on left: 98
        on right: 77
    call_stmt_as_exp (107)
        on left: 99
        on right: 41
    optional_arg_list (108)
        on left: 100 101
        on right: 98 99
    arg_list (109)
        on left: 102 103
        on right: 101 103


State 0

    0 $accept: • main $end
    1 main: • program_prod
    2     | ε •  [$end]
    3 program_prod: • A_PROGRAM A_NAME A_BEGIN optional_declaration_list A_END

    A_PROGRAM  shift, and go to state 1

    $default  reduce using rule 2 (main)

    main          go to state 2
    program_prod  go to state 3


State 1

    3 program_prod: A_PROGRAM • A_NAME A_BEGIN optional_declaration_list A_END

    A_NAME  shift, and go to state 4


State 2

    0 $accept: main • $end

    $end  shift, and go to state 5


State 3

    1 main: program_prod •

    $default  reduce using rule 1 (main)


State 4

    3 program_prod: A_PROGRAM A_NAME • A_BEGIN optional_declaration_list A_END

    A_BEGIN  shift, and go to state 6


State 5

    0 $accept: main $end •

    $default  accept


State 6

    3 program_prod: A_PROGRAM A_NAME A_BEGIN • optional_declaration_list A_END
    4 optional_declaration_list: ε •  [A_END]
    5                          | • declaration_list
    6 declaration_list: • declaration
    7                 | • declaration_list ';' declaration
    8 declaration: • var_declaration
    9            | • proc_declaration
   10            | • rec_declaration
   11 var_declaration: • A_VAR A_NAME ':' type_spec optional_assign_exp
   12                | • A_VAR A_NAME A_ASSIGN exp
   21 proc_declaration: • A_PROCEDURE A_NAME '(' optional_param_list ')' optional_return_type A_BEGIN optional_proc_decls_in_block stmt_list A_END
   35 rec_declaration: • A_STRUCT A_NAME '{' optional_rec_field_list '}'

    A_PROCEDURE  shift, and go to state 7
    A_VAR        shift, and go to state 8
    A_STRUCT     shift, and go to state 9

    $default  reduce using rule 4 (optional_declaration_list)

    optional_declaration_list  go to state 10
    declaration_list           go to state 11
    declaration                go to state 12
    var_declaration            go to state 13
    proc_declaration           go to state 14
    rec_declaration            go to state 15


State 7

   21 proc_declaration: A_PROCEDURE • A_NAME '(' optional_param_list ')' optional_return_type A_BEGIN optional_proc_decls_in_block stmt_list A_END

    A_NAME  shift, and go to state 16


State 8

   11 var_declaration: A_VAR • A_NAME ':' type_spec optional_assign_exp
   12                | A_VAR • A_NAME A_ASSIGN exp

    A_NAME  shift, and go to state 17


State 9

   35 rec_declaration: A_STRUCT • A_NAME '{' optional_rec_field_list '}'

    A_NAME  shift, and go to state 18


State 10

    3 program_prod: A_PROGRAM A_NAME A_BEGIN optional_declaration_list • A_END

    A_END  shift, and go to state 19


State 11

    5 optional_declaration_list: declaration_list •  [A_END, A_IN]
    7 declaration_list: declaration_list • ';' declaration

    ';'  shift, and go to state 20

    $default  reduce using rule 5 (optional_declaration_list)


State 12

    6 declaration_list: declaration •

    $default  reduce using rule 6 (declaration_list)


State 13

    8 declaration: var_declaration •

    $default  reduce using rule 8 (declaration)


State 14

    9 declaration: proc_declaration •

    $default  reduce using rule 9 (declaration)


State 15

   10 declaration: rec_declaration •

    $default  reduce using rule 10 (declaration)


State 16

   21 proc_declaration: A_PROCEDURE A_NAME • '(' optional_param_list ')' optional_return_type A_BEGIN optional_proc_decls_in_block stmt_list A_END

    '('  shift, and go to state 21


State 17

   11 var_declaration: A_VAR A_NAME • ':' type_spec optional_assign_exp
   12                | A_VAR A_NAME • A_ASSIGN exp

    ':'       shift, and go to state 22
    A_ASSIGN  shift, and go to state 23


State 18

   35 rec_declaration: A_STRUCT A_NAME • '{' optional_rec_field_list '}'

    '{'  shift, and go to state 24


State 19

    3 program_prod: A_PROGRAM A_NAME A_BEGIN optional_declaration_list A_END •

    $default  reduce using rule 3 (program_prod)


State 20

    7 declaration_list: declaration_list ';' • declaration
    8 declaration: • var_declaration
    9            | • proc_declaration
   10            | • rec_declaration
   11 var_declaration: • A_VAR A_NAME ':' type_spec optional_assign_exp
   12                | • A_VAR A_NAME A_ASSIGN exp
   21 proc_declaration: • A_PROCEDURE A_NAME '(' optional_param_list ')' optional_return_type A_BEGIN optional_proc_decls_in_block stmt_list A_END
   35 rec_declaration: • A_STRUCT A_NAME '{' optional_rec_field_list '}'

    A_PROCEDURE  shift, and go to state 7
    A_VAR        shift, and go to state 8
    A_STRUCT     shift, and go to state 9

    declaration       go to state 25
    var_declaration   go to state 13
    proc_declaration  go to state 14
    rec_declaration   go to state 15


State 21

   21 proc_declaration: A_PROCEDURE A_NAME '(' • optional_param_list ')' optional_return_type A_BEGIN optional_proc_decls_in_block stmt_list A_END
   22 optional_param_list: ε •  [')']
   23                    | • param_list
   24 param_list: • paramfield_decl
   25           | • param_list ',' paramfield_decl
   26 paramfield_decl: • A_NAME ':' type_spec

    A_NAME  shift, and go to state 26

    $default  reduce using rule 22 (optional_param_list)

    optional_param_list  go to state 27
    param_list           go to state 28
    paramfield_decl      go to state 29


State 22

   11 var_declaration: A_VAR A_NAME ':' • type_spec optional_assign_exp
   15 type_spec: • A_FLOAT
   16          | • A_INT
   17          | • A_STRING
   18          | • A_BOOL
   19          | • A_NAME
   20          | • A_REF '(' type_spec ')'

    A_NAME    shift, and go to state 30
    A_FLOAT   shift, and go to state 31
    A_INT     shift, and go to state 32
    A_STRING  shift, and go to state 33
    A_BOOL    shift, and go to state 34
    A_REF     shift, and go to state 35

    type_spec  go to state 36


State 23

   12 var_declaration: A_VAR A_NAME A_ASSIGN • exp
   40 exp: • literal
   41    | • call_stmt_as_exp
   42    | • A_NEW A_NAME
   43    | • var_access
   44    | • ref_var
   45    | • deref_var
   46    | • '(' exp ')'
   47    | • A_NOT exp
   48    | • exp A_OR_LOGIC exp
   49    | • exp A_AND_LOGIC exp
   50    | • exp '<' exp
   51    | • exp A_LESS_THAN_EQUAL exp
   52    | • exp '>' exp
   53    | • exp A_GREATER_THAN_EQUAL exp
   54    | • exp '=' exp
   55    | • exp A_DIFFERENT exp
   56    | • exp '+' exp
   57    | • exp '-' exp
   58    | • exp '*' exp
   59    | • exp '/' exp
   60    | • exp '^' exp
   61 ref_var: • A_REF '(' var_access ')'
   62 deref_var: • A_DEREF '(' var_access ')'
   63          | • A_DEREF '(' deref_var ')'
   64 var_access: • A_NAME
   65           | • exp '.' A_NAME
   66 literal: • FLOAT_LITERAL
   67        | • INT_LITERAL
   68        | • STRING_LITERAL
   69        | • bool_literal
   70        | • A_NULL
   71 bool_literal: • A_TRUE
   72             | • A_FALSE
   99 call_stmt_as_exp: • A_NAME '(' optional_arg_list ')'

    INT_LITERAL     shift, and go to state 37
    FLOAT_LITERAL   shift, and go to state 38
    A_NAME          shift, and go to state 39
    STRING_LITERAL  shift, and go to state 40
    A_TRUE          shift, and go to state 41
    A_FALSE         shift, and go to state 42
    A_NULL          shift, and go to state 43
    A_NOT           shift, and go to state 44
    A_NEW           shift, and go to state 45
    A_REF           shift, and go to state 46
    A_DEREF         shift, and go to state 47
    '('             shift, and go to state 48

    exp               go to state 49
    ref_var           go to state 50
    deref_var         go to state 51
    var_access        go to state 52
    literal           go to state 53
    bool_literal      go to state 54
    call_stmt_as_exp  go to state 55


State 24

   26 paramfield_decl: • A_NAME ':' type_spec
   35 rec_declaration: A_STRUCT A_NAME '{' • optional_rec_field_list '}'
   36 optional_rec_field_list: ε •  ['}']
   37                        | • rec_field_list
   38 rec_field_list: • paramfield_decl
   39               | • rec_field_list ';' paramfield_decl

    A_NAME  shift, and go to state 26

    $default  reduce using rule 36 (optional_rec_field_list)

    paramfield_decl          go to state 56
    optional_rec_field_list  go to state 57
    rec_field_list           go to state 58


State 25

    7 declaration_list: declaration_list ';' declaration •

    $default  reduce using rule 7 (declaration_list)


State 26

   26 paramfield_decl: A_NAME • ':' type_spec

    ':'  shift, and go to state 59


State 27

   21 proc_declaration: A_PROCEDURE A_NAME '(' optional_param_list • ')' optional_return_type A_BEGIN optional_proc_decls_in_block stmt_list A_END

    ')'  shift, and go to state 60


State 28

   23 optional_param_list: param_list •  [')']
   25 param_list: param_list • ',' paramfield_decl

    ','  shift, and go to state 61

    $default  reduce using rule 23 (optional_param_list)


State 29

   24 param_list: paramfield_decl •

    $default  reduce using rule 24 (param_list)


State 30

   19 type_spec: A_NAME •

    $default  reduce using rule 19 (type_spec)


State 31

   15 type_spec: A_FLOAT •

    $default  reduce using rule 15 (type_spec)


State 32

   16 type_spec: A_INT •

    $default  reduce using rule 16 (type_spec)


State 33

   17 type_spec: A_STRING •

    $default  reduce using rule 17 (type_spec)


State 34

   18 type_spec: A_BOOL •

    $default  reduce using rule 18 (type_spec)


State 35

   20 type_spec: A_REF • '(' type_spec ')'

    '('  shift, and go to state 62


State 36

   11 var_declaration: A_VAR A_NAME ':' type_spec • optional_assign_exp
   13 optional_assign_exp: ε •  [A_END, A_IN, ';']
   14                    | • A_ASSIGN exp

    A_ASSIGN  shift, and go to state 63

    $default  reduce using rule 13 (optional_assign_exp)

    optional_assign_exp  go to state 64


State 37

   67 literal: INT_LITERAL •

    $default  reduce using rule 67 (literal)


State 38

   66 literal: FLOAT_LITERAL •

    $default  reduce using rule 66 (literal)


State 39

   64 var_access: A_NAME •  [A_END, A_THEN, A_ELSE, A_FI, A_DO, A_OD, A_OF, A_ESAC, A_OTHERWISE, A_IN, ';', ',', ')', '<', '>', '=', '+', '-', '*', '/', '^', '.', A_LESS_THAN_EQUAL, A_GREATER_THAN_EQUAL, A_DIFFERENT, A_OR_LOGIC, A_AND_LOGIC, '|']
   99 call_stmt_as_exp: A_NAME • '(' optional_arg_list ')'

    '('  shift, and go to state 65

    $default  reduce using rule 64 (var_access)


State 40

   68 literal: STRING_LITERAL •

    $default  reduce using rule 68 (literal)


State 41

   71 bool_literal: A_TRUE •

    $default  reduce using rule 71 (bool_literal)


State 42

   72 bool_literal: A_FALSE •

    $default  reduce using rule 72 (bool_literal)


State 43

   70 literal: A_NULL •

    $default  reduce using rule 70 (literal)


State 44

   40 exp: • literal
   41    | • call_stmt_as_exp
   42    | • A_NEW A_NAME
   43    | • var_access
   44    | • ref_var
   45    | • deref_var
   46    | • '(' exp ')'
   47    | • A_NOT exp
   47    | A_NOT • exp
   48    | • exp A_OR_LOGIC exp
   49    | • exp A_AND_LOGIC exp
   50    | • exp '<' exp
   51    | • exp A_LESS_THAN_EQUAL exp
   52    | • exp '>' exp
   53    | • exp A_GREATER_THAN_EQUAL exp
   54    | • exp '=' exp
   55    | • exp A_DIFFERENT exp
   56    | • exp '+' exp
   57    | • exp '-' exp
   58    | • exp '*' exp
   59    | • exp '/' exp
   60    | • exp '^' exp
   61 ref_var: • A_REF '(' var_access ')'
   62 deref_var: • A_DEREF '(' var_access ')'
   63          | • A_DEREF '(' deref_var ')'
   64 var_access: • A_NAME
   65           | • exp '.' A_NAME
   66 literal: • FLOAT_LITERAL
   67        | • INT_LITERAL
   68        | • STRING_LITERAL
   69        | • bool_literal
   70        | • A_NULL
   71 bool_literal: • A_TRUE
   72             | • A_FALSE
   99 call_stmt_as_exp: • A_NAME '(' optional_arg_list ')'

    INT_LITERAL     shift, and go to state 37
    FLOAT_LITERAL   shift, and go to state 38
    A_NAME          shift, and go to state 39
    STRING_LITERAL  shift, and go to state 40
    A_TRUE          shift, and go to state 41
    A_FALSE         shift, and go to state 42
    A_NULL          shift, and go to state 43
    A_NOT           shift, and go to state 44
    A_NEW           shift, and go to state 45
    A_REF           shift, and go to state 46
    A_DEREF         shift, and go to state 47
    '('             shift, and go to state 48

    exp               go to state 66
    ref_var           go to state 50
    deref_var         go to state 51
    var_access        go to state 52
    literal           go to state 53
    bool_literal      go to state 54
    call_stmt_as_exp  go to state 55


State 45

   42 exp: A_NEW • A_NAME

    A_NAME  shift, and go to state 67


State 46

   61 ref_var: A_REF • '(' var_access ')'

    '('  shift, and go to state 68


State 47

   62 deref_var: A_DEREF • '(' var_access ')'
   63          | A_DEREF • '(' deref_var ')'

    '('  shift, and go to state 69


State 48

   40 exp: • literal
   41    | • call_stmt_as_exp
   42    | • A_NEW A_NAME
   43    | • var_access
   44    | • ref_var
   45    | • deref_var
   46    | • '(' exp ')'
   46    | '(' • exp ')'
   47    | • A_NOT exp
   48    | • exp A_OR_LOGIC exp
   49    | • exp A_AND_LOGIC exp
   50    | • exp '<' exp
   51    | • exp A_LESS_THAN_EQUAL exp
   52    | • exp '>' exp
   53    | • exp A_GREATER_THAN_EQUAL exp
   54    | • exp '=' exp
   55    | • exp A_DIFFERENT exp
   56    | • exp '+' exp
   57    | • exp '-' exp
   58    | • exp '*' exp
   59    | • exp '/' exp
   60    | • exp '^' exp
   61 ref_var: • A_REF '(' var_access ')'
   62 deref_var: • A_DEREF '(' var_access ')'
   63          | • A_DEREF '(' deref_var ')'
   64 var_access: • A_NAME
   65           | • exp '.' A_NAME
   66 literal: • FLOAT_LITERAL
   67        | • INT_LITERAL
   68        | • STRING_LITERAL
   69        | • bool_literal
   70        | • A_NULL
   71 bool_literal: • A_TRUE
   72             | • A_FALSE
   99 call_stmt_as_exp: • A_NAME '(' optional_arg_list ')'

    INT_LITERAL     shift, and go to state 37
    FLOAT_LITERAL   shift, and go to state 38
    A_NAME          shift, and go to state 39
    STRING_LITERAL  shift, and go to state 40
    A_TRUE          shift, and go to state 41
    A_FALSE         shift, and go to state 42
    A_NULL          shift, and go to state 43
    A_NOT           shift, and go to state 44
    A_NEW           shift, and go to state 45
    A_REF           shift, and go to state 46
    A_DEREF         shift, and go to state 47
    '('             shift, and go to state 48

    exp               go to state 70
    ref_var           go to state 50
    deref_var         go to state 51
    var_access        go to state 52
    literal           go to state 53
    bool_literal      go to state 54
    call_stmt_as_exp  go to state 55


State 49

   12 var_declaration: A_VAR A_NAME A_ASSIGN exp •  [A_END, A_IN, ';']
   48 exp: exp • A_OR_LOGIC exp
   49    | exp • A_AND_LOGIC exp
   50    | exp • '<' exp
   51    | exp • A_LESS_THAN_EQUAL exp
   52    | exp • '>' exp
   53    | exp • A_GREATER_THAN_EQUAL exp
   54    | exp • '=' exp
   55    | exp • A_DIFFERENT exp
   56    | exp • '+' exp
   57    | exp • '-' exp
   58    | exp • '*' exp
   59    | exp • '/' exp
   60    | exp • '^' exp
   65 var_access: exp • '.' A_NAME

    '<'                   shift, and go to state 71
    '>'                   shift, and go to state 72
    '='                   shift, and go to state 73
    '+'                   shift, and go to state 74
    '-'                   shift, and go to state 75
    '*'                   shift, and go to state 76
    '/'                   shift, and go to state 77
    '^'                   shift, and go to state 78
    '.'                   shift, and go to state 79
    A_LESS_THAN_EQUAL     shift, and go to state 80
    A_GREATER_THAN_EQUAL  shift, and go to state 81
    A_DIFFERENT           shift, and go to state 82
    A_OR_LOGIC            shift, and go to state 83
    A_AND_LOGIC           shift, and go to state 84

    $default  reduce using rule 12 (var_declaration)


State 50

   44 exp: ref_var •

    $default  reduce using rule 44 (exp)


State 51

   45 exp: deref_var •

    $default  reduce using rule 45 (exp)


State 52

   43 exp: var_access •

    $default  reduce using rule 43 (exp)


State 53

   40 exp: literal •

    $default  reduce using rule 40 (exp)


State 54

   69 literal: bool_literal •

    $default  reduce using rule 69 (literal)


State 55

   41 exp: call_stmt_as_exp •

    $default  reduce using rule 41 (exp)


State 56

   38 rec_field_list: paramfield_decl •

    $default  reduce using rule 38 (rec_field_list)


State 57

   35 rec_declaration: A_STRUCT A_NAME '{' optional_rec_field_list • '}'

    '}'  shift, and go to state 85


State 58

   37 optional_rec_field_list: rec_field_list •  ['}']
   39 rec_field_list: rec_field_list • ';' paramfield_decl

    ';'  shift, and go to state 86

    $default  reduce using rule 37 (optional_rec_field_list)


State 59

   15 type_spec: • A_FLOAT
   16          | • A_INT
   17          | • A_STRING
   18          | • A_BOOL
   19          | • A_NAME
   20          | • A_REF '(' type_spec ')'
   26 paramfield_decl: A_NAME ':' • type_spec

    A_NAME    shift, and go to state 30
    A_FLOAT   shift, and go to state 31
    A_INT     shift, and go to state 32
    A_STRING  shift, and go to state 33
    A_BOOL    shift, and go to state 34
    A_REF     shift, and go to state 35

    type_spec  go to state 87


State 60

   21 proc_declaration: A_PROCEDURE A_NAME '(' optional_param_list ')' • optional_return_type A_BEGIN optional_proc_decls_in_block stmt_list A_END
   27 optional_return_type: ε •  [A_BEGIN]
   28                     | • ':' type_spec

    ':'  shift, and go to state 88

    $default  reduce using rule 27 (optional_return_type)

    optional_return_type  go to state 89


State 61

   25 param_list: param_list ',' • paramfield_decl
   26 paramfield_decl: • A_NAME ':' type_spec

    A_NAME  shift, and go to state 26

    paramfield_decl  go to state 90


State 62

   15 type_spec: • A_FLOAT
   16          | • A_INT
   17          | • A_STRING
   18          | • A_BOOL
   19          | • A_NAME
   20          | • A_REF '(' type_spec ')'
   20          | A_REF '(' • type_spec ')'

    A_NAME    shift, and go to state 30
    A_FLOAT   shift, and go to state 31
    A_INT     shift, and go to state 32
    A_STRING  shift, and go to state 33
    A_BOOL    shift, and go to state 34
    A_REF     shift, and go to state 35

    type_spec  go to state 91


State 63

   14 optional_assign_exp: A_ASSIGN • exp
   40 exp: • literal
   41    | • call_stmt_as_exp
   42    | • A_NEW A_NAME
   43    | • var_access
   44    | • ref_var
   45    | • deref_var
   46    | • '(' exp ')'
   47    | • A_NOT exp
   48    | • exp A_OR_LOGIC exp
   49    | • exp A_AND_LOGIC exp
   50    | • exp '<' exp
   51    | • exp A_LESS_THAN_EQUAL exp
   52    | • exp '>' exp
   53    | • exp A_GREATER_THAN_EQUAL exp
   54    | • exp '=' exp
   55    | • exp A_DIFFERENT exp
   56    | • exp '+' exp
   57    | • exp '-' exp
   58    | • exp '*' exp
   59    | • exp '/' exp
   60    | • exp '^' exp
   61 ref_var: • A_REF '(' var_access ')'
   62 deref_var: • A_DEREF '(' var_access ')'
   63          | • A_DEREF '(' deref_var ')'
   64 var_access: • A_NAME
   65           | • exp '.' A_NAME
   66 literal: • FLOAT_LITERAL
   67        | • INT_LITERAL
   68        | • STRING_LITERAL
   69        | • bool_literal
   70        | • A_NULL
   71 bool_literal: • A_TRUE
   72             | • A_FALSE
   99 call_stmt_as_exp: • A_NAME '(' optional_arg_list ')'

    INT_LITERAL     shift, and go to state 37
    FLOAT_LITERAL   shift, and go to state 38
    A_NAME          shift, and go to state 39
    STRING_LITERAL  shift, and go to state 40
    A_TRUE          shift, and go to state 41
    A_FALSE         shift, and go to state 42
    A_NULL          shift, and go to state 43
    A_NOT           shift, and go to state 44
    A_NEW           shift, and go to state 45
    A_REF           shift, and go to state 46
    A_DEREF         shift, and go to state 47
    '('             shift, and go to state 48

    exp               go to state 92
    ref_var           go to state 50
    deref_var         go to state 51
    var_access        go to state 52
    literal           go to state 53
    bool_literal      go to state 54
    call_stmt_as_exp  go to state 55


State 64

   11 var_declaration: A_VAR A_NAME ':' type_spec optional_assign_exp •

    $default  reduce using rule 11 (var_declaration)


State 65

   40 exp: • literal
   41    | • call_stmt_as_exp
   42    | • A_NEW A_NAME
   43    | • var_access
   44    | • ref_var
   45    | • deref_var
   46    | • '(' exp ')'
   47    | • A_NOT exp
   48    | • exp A_OR_LOGIC exp
   49    | • exp A_AND_LOGIC exp
   50    | • exp '<' exp
   51    | • exp A_LESS_THAN_EQUAL exp
   52    | • exp '>' exp
   53    | • exp A_GREATER_THAN_EQUAL exp
   54    | • exp '=' exp
   55    | • exp A_DIFFERENT exp
   56    | • exp '+' exp
   57    | • exp '-' exp
   58    | • exp '*' exp
   59    | • exp '/' exp
   60    | • exp '^' exp
   61 ref_var: • A_REF '(' var_access ')'
   62 deref_var: • A_DEREF '(' var_access ')'
   63          | • A_DEREF '(' deref_var ')'
   64 var_access: • A_NAME
   65           | • exp '.' A_NAME
   66 literal: • FLOAT_LITERAL
   67        | • INT_LITERAL
   68        | • STRING_LITERAL
   69        | • bool_literal
   70        | • A_NULL
   71 bool_literal: • A_TRUE
   72             | • A_FALSE
   99 call_stmt_as_exp: • A_NAME '(' optional_arg_list ')'
   99                 | A_NAME '(' • optional_arg_list ')'
  100 optional_arg_list: ε •  [')']
  101                  | • arg_list
  102 arg_list: • exp
  103         | • arg_list ',' exp

    INT_LITERAL     shift, and go to state 37
    FLOAT_LITERAL   shift, and go to state 38
    A_NAME          shift, and go to state 39
    STRING_LITERAL  shift, and go to state 40
    A_TRUE          shift, and go to state 41
    A_FALSE         shift, and go to state 42
    A_NULL          shift, and go to state 43
    A_NOT           shift, and go to state 44
    A_NEW           shift, and go to state 45
    A_REF           shift, and go to state 46
    A_DEREF         shift, and go to state 47
    '('             shift, and go to state 48

    $default  reduce using rule 100 (optional_arg_list)

    exp                go to state 93
    ref_var            go to state 50
    deref_var          go to state 51
    var_access         go to state 52
    literal            go to state 53
    bool_literal       go to state 54
    call_stmt_as_exp   go to state 55
    optional_arg_list  go to state 94
    arg_list           go to state 95


State 66

   47 exp: A_NOT exp •  [A_END, A_THEN, A_ELSE, A_FI, A_DO, A_OD, A_OF, A_ESAC, A_OTHERWISE, A_IN, ';', ',', ')', '<', '>', '=', '+', '-', '*', '/', '^', A_LESS_THAN_EQUAL, A_GREATER_THAN_EQUAL, A_DIFFERENT, A_OR_LOGIC, A_AND_LOGIC, '|']
   48    | exp • A_OR_LOGIC exp
   49    | exp • A_AND_LOGIC exp
   50    | exp • '<' exp
   51    | exp • A_LESS_THAN_EQUAL exp
   52    | exp • '>' exp
   53    | exp • A_GREATER_THAN_EQUAL exp
   54    | exp • '=' exp
   55    | exp • A_DIFFERENT exp
   56    | exp • '+' exp
   57    | exp • '-' exp
   58    | exp • '*' exp
   59    | exp • '/' exp
   60    | exp • '^' exp
   65 var_access: exp • '.' A_NAME
